<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:layout_marginBottom="4dp"
       android:paddingLeft="16dp"
       android:paddingRight="16dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/name_label"
              android:textColor="#000000"/>
          <EditText
              android:layout_width="120dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:inputType="textPersonName"
              android:hint="@string/first_name_hint"
              android:ems="10"
              android:id="@+id/firstName"
              android:layout_gravity="center_horizontal"
              android:background="#ffcbcbcb"
              android:focusable="true"/>
          <EditText
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:inputType="textPersonName"
              android:hint="@string/last_name_hint"
              android:ems="10"
              android:id="@+id/lastName"
              android:background="#ffcbcbcb"
              android:focusable="true"/>
    </LinearLayout>
    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:layout_marginBottom="4dp"
       android:paddingLeft="16dp"
       android:paddingRight="16dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/phone_label"
              android:textColor="#000000"/>
          <EditText
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="6dp"
              android:inputType="phone"
              android:hint="@string/calvary_phone"
              android:ems="10"
              android:id="@+id/phoneNumber"
              android:background="#ffcbcbcb"
              android:focusable="true"/>
    </LinearLayout>
    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:layout_marginBottom="4dp"
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:layout_marginBottom="4dp"
              android:text="@string/email_label"
              android:textColor="#000000"/>
          <EditText
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="11dp"
              android:inputType="textEmailAddress"
              android:hint="@string/email_hint"
              android:ems="10"
              android:id="@+id/editText3"
              android:layout_gravity="center_horizontal"
              android:background="#ffcbcbcb"
              android:focusable="true"/>
    </LinearLayout>
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:layout_marginBottom="8dp"
       android:layout_marginLeft="16dp"
       android:text="@string/explanation_label"
       android:textColor="#000000"/>
    <EditText
       android:layout_width="350dp"
       android:layout_height="110dp"
       android:layout_gravity="center_horizontal"
       android:inputType="textMultiLine"
       android:ems="10"
       android:hint="@string/enter_text_hint"
       android:id="@+id/explanation"
       android:background="#ffcbcbcb"
       android:focusable="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/form_button_label"/>

</LinearLayout>